# advent-of-code-rust

./: .gitignore  Cargo.toml  README.md  snippet.rs.txt
.cargo/: config  config.toml
advent-of-code-client/: Cargo.toml  README.md
advent-of-code-client/data/: too_recent.html
advent-of-code-client/src/: cache.rs  lib.rs  problem.rs  score.rs
advent-of-code-ocr/: Cargo.toml  README.md
advent-of-code-ocr/src/: lib.rs
src/: client.rs  lib.rs  main.rs  solutions.rs
src/client/: cache.rs  problem.rs  score.rs
src/solutions/: answer.rs  mod.rs  y2023.rs
src/solutions/y2017/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs
src/solutions/y2022/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs
src/solutions/y2023/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs
src/utils/: bit_set.rs  map2d.rs  math.rs  mod.rs  ocr.rs  take_until_inclusive.rs
