[package]
name = "advent-of-code"
authors = ["Oliver Fleckenstein <oliverfl@live.dk>"]
version = "0.1.0"
edition = "2021"

[dependencies]
advent-of-code-ocr = { path = "./advent-of-code-ocr" }
reqwest = { version = "0.11.22", features = ["blocking"] }
itertools = "0.12.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = { version = "1.0" }
regex = "1.10.2"
hashbag = { version = "0.1.11" }
colored = { version = "2.0.4" }
clap = { version = "4.4.11", features = ["derive"] }
csv = "1.3.0"
array2d = "^0.3.0"
string-builder = "0.2.0"
priority-queue = "1.3.2"
lazy_static = "1.4.0"
pathfinding = "4.4.0"
rangemap = "1.4.0"
