[package]
name = "advent-of-code-client"
authors = ["Oliver Fleckenstein <oliverfl@live.dk>"]
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11.22", features = ["blocking"] }
colored = { version = "2.0.4" }
clap = { version = "4.4.11", features = ["derive"] }
derive-getters = "0.3.0"
anyhow = "1.0.75"
regex = "1.10.2"
serde_json = "1.0.108"

[dev-dependencies]
wiremock = "0.5.22"
async-std = { version = "1.12.0", features = ["attributes"] }
fake = { version = "2.9.1", features = ["derive"] }
rstest = "0.18.2"
